# scheme-hs

./: .ghci  .gitignore  CHANGELOG.md  Differences.md  LICENSE  README.md  cabal.project.freeze  run  scheme-hs.cabal  stdlib.scm
.github/workflows/: pipeline.yml
app/: Main.hs
examples/: 99bottles.scm  factorial.scm  fibonacci.scm  fizzbuzz.scm  mergesort.scm  ycombinator.scm
lib/: Scheme.hs
lib/Scheme/: Environment.hs  Eval.hs  Operators.hs  Parser.hs  Primitives.hs  Types.hs  Utils.hs
lib/Scheme/Primitives/: Boolean.hs  Equivalence.hs  Eval.hs  IO.hs  Lists.hs  Numbers.hs  Strings.hs  Symbols.hs
spec/: Main.hs
spec/in/: procedure.scm
src/: Scheme.hs
src/Scheme/: Environment.hs  Eval.hs  Operators.hs  Parser.hs  Primitives.hs  Types.hs  Utils.hs
src/Scheme/Primitives/: Equivalence.hs  Eval.hs  IO.hs  Numbers.hs
test/Scheme/: EquivalenceSpec.hs  ListSpec.hs  NumberSpec.hs  ParserSpec.hs  ProcedureSpec.hs  SchemeSpec.hs  SymbolSpec.hs  TestUtils.hs
