cabal-version:      2.4
name:               scheme-hs
version:            0.1.0
tested-with:        GHC ==8.10.2
synopsis:           A simple implementation of RSR7
description:        A simple implementation of RSR7
homepage:           https://github.com/sondr3/scheme-hs
bug-reports:        https://github.com/sondr3/scheme-hs/issues
license:            MIT
license-file:       LICENSE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
category:           Language
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/scheme-hs.git

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

common config
  default-language:   Haskell2010  
  default-extensions: NamedFieldPuns
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
    , base        ^>=4.14.1.0
    , megaparsec  ^>=9.0.1
    , text        ^>=1.2.3.2

common library
  if flag(dev)
    ghc-options: -O0 -Wall -Werror

  else
    ghc-options: -O2 -Wall

library
  import:          config, library
  hs-source-dirs:  lib
  exposed-modules: Scheme
  other-modules:
    Scheme.Parser
    Scheme.Types

executable scheme
  import:         config
  main-is:        Main.hs
  build-depends:  scheme-hs
  hs-source-dirs: app

  -- other-modules:
  -- other-extensions:

test-suite scheme-hs-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs  
  other-modules:
    Scheme.ParserSpec
    Scheme.SchemeSpec
    Scheme.TestUtils

  default-extensions: OverloadedStrings
  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.4
  build-depends:
    , hspec             ^>=2.7.4
    , hspec-megaparsec  ^>=2.2.0
    , scheme-hs

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
