cabal-version:      3.0
name:               scheme-hs
version:            0.1.0
tested-with:        GHC ==9.0
synopsis:           A simple implementation of RSR7
description:
  A simple implementation of RSR7 with a host of bugs and missing features

homepage:           https://github.com/sondr3/scheme-hs
bug-reports:        https://github.com/sondr3/scheme-hs/issues
license:            MIT
license-file:       LICENSE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
category:           Language
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/scheme-hs.git

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

common config
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
    , array          ^>=0.5
    , base           ^>=4.15
    , bytestring     ^>=0.11
    , containers     ^>=0.6
    , megaparsec     ^>=9.2
    , mtl            ^>=2.2
    , pretty-simple  ^>=4.0
    , text           ^>=2.0

common library
  if flag(dev)
    ghc-options: "--disable-optimization" -Wall -Werror

  else
    ghc-options: -Wall

library
  import:          config, library
  hs-source-dirs:  src
  exposed-modules: Scheme
  other-modules:
    Scheme.Environment
    Scheme.Eval
    Scheme.Operators
    Scheme.Parser
    Scheme.Primitives
    Scheme.Primitives.Boolean
    Scheme.Primitives.Equivalence
    Scheme.Primitives.Eval
    Scheme.Primitives.IO
    Scheme.Primitives.Lists
    Scheme.Primitives.Numbers
    Scheme.Primitives.Strings
    Scheme.Primitives.Symbols
    Scheme.Types
    Scheme.Utils

executable scheme
  import:         config
  main-is:        Main.hs
  build-depends:
    , haskeline  ^>=0.8
    , scheme-hs

  hs-source-dirs: app

test-suite scheme-hs-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs  
  other-modules:
    Scheme.EquivalenceSpec
    Scheme.ListSpec
    Scheme.NumberSpec
    Scheme.ParserSpec
    Scheme.ProcedureSpec
    Scheme.SchemeSpec
    Scheme.SymbolSpec
    Scheme.TestUtils

  build-tool-depends: hspec-discover:hspec-discover ^>=2.9
  build-depends:
    , hspec             ^>=2.9
    , hspec-megaparsec  ^>=2.2
    , scheme-hs

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

test-suite scheme-hs-golden
  import:         config
  type:           exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is:        Main.hs 
  build-depends:
    , scheme-hs
    , tasty         ^>=1.4
    , tasty-golden  ^>=2.3

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
